# BitPoolMiner

./: CMakeLists.txt  README.md  clouthash.cu  miner.cpp
