cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
set (CMAKE_CXX_STANDARD 14)
project(bitpoolminer LANGUAGES CXX CUDA)
add_executable(bitpoolminer miner.cpp clouthash.cu)
target_link_libraries(bitpoolminer sioclient)
set_target_properties(bitpoolminer PROPERTIES CUDA_SEPARABLE_COMPILATION ON CUDA_ARCHITECTURES 52 60 61 70 75 80 86)
